--- a/client/package.json
+++ b/client/package.json
@@ -39,7 +39,8 @@
     "styled-components": "^5.2.3",
     "typescript": "^4.2.3",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "@pwa-frame/core": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
