--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "docker": "node ./app/out/server.js"
+    "docker": "node ./app/out/server.js",
+    "build": "tsc -b"
   },
   "author": "",
   "license": "ISC",
