--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/react-router": "^5.1.13",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
+    "typescript": "~4.3.5",
     "@types/uuid": "^8.3.0"
   },
   "dependencies": {
@@ -37,7 +38,6 @@
     "react-sortable-hoc": "^2.0.0",
     "socket.io-client": "^4.0.0",
     "styled-components": "^5.2.3",
-    "typescript": "^4.2.3",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.1",
     "@pwa-frame/core": "^1.0.0"
