--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,6 @@
     "@typescript-eslint/parser": "^4.18.0",
     "eslint": "^7.22.0",
     "eslint-plugin-react": "^7.22.0",
-    "typescript": "^4.2.3"
+    "typescript": "~4.3.5"
   }
 }
