--- a/.github/workflows/publish_client.yml
+++ b/.github/workflows/publish_client.yml
@@ -1,14 +1,14 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Build server
+name: Publish client
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  # push:
-  #   branches: [ main ]
-  # pull_request:
-  #   branches: [ main ]
+  push:
+    branches: [ release ]
+  pull_request:
+    branches: [ release ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -33,7 +33,8 @@ jobs:
           npm i
           tsc -b
       - name: Compile client
-        working-directory: ./server
+        working-directory: ./client
         run: |
           npm i
           tsc -b
+          npm run build
