--- a/.github/workflows/publish_server.yml
+++ b/.github/workflows/publish_server.yml
@@ -1,14 +1,14 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Build client
+name: Publish server
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  # push:
-  #   branches: [ main ]
-  # pull_request:
-  #   branches: [ main ]
+  push:
+    branches: [ release ]
+  pull_request:
+    branches: [ release ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -29,12 +29,29 @@ jobs:
           node-version: 12
       - name: Compile common
         working-directory: ./common
+        run: npm i
+
+      - name: Compile server
+        working-directory: ./server
         run: |
           npm i
           tsc -b
-      - name: Compile client
-        working-directory: ./client
-        run: |
-          npm i
-          tsc -b
-          npm run build
+
+      - name: Login to Heroku Container registry
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        run: heroku container:login
+
+      - name: Build docker
+        run: docker build -t bratiano/server -f ./server/Dockerfile .
+
+      - name: Tag docker
+        run: docker tag bratiano/server:latest registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
+
+      - name: Docker push
+        run: docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
+
+      - name: Heroku container release
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        run: heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web
